# stylebot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
_plans/: OVERVIEW.md  ai-style-fine-tune-decisions.md  ai-style-fine-tune.md  eval-harness.md  heading-context.md  next-steps.md  phase-1-pair-capture.md  phase-2-synthetic-pairs.md  phase-3-training.md  phase-4-inference-cli.md  post-qa-continuation.md  qa-handoff.md  slice-blog-integration.md  slice-mlx-serving.md  vscode-marker.md
_training_pairs/: README.md
docs/: fine_tuning_danbot.qmd  fine_tuning_danbot.yaml
src/stylebot/: ai_core.py  capture.py  classify.py  classify_train.py  config.py  eval.py  generators.py  infer.py  jsonl.py  lib.py  pairs.py  report.py  serve.py  splits.py  synth.py  targets.py  train.py
tests/: conftest.py  test_ai_style_log.py  test_capture.py  test_classify.py  test_classify_train.py  test_config.py  test_eval.py  test_infer.py  test_jsonl.py  test_lib.py  test_marker_segmentation.py  test_merge.py  test_pairs.py  test_report.py  test_segment.py  test_selection.py  test_serve.py  test_smoke.py  test_splits.py  test_synth.py  test_synth_cli.py  test_synth_keys.py  test_train.py
tests/fixtures/: expected_segments.json  segmentation.qmd
vscode-voice-marker/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-voice-marker/src/: decorations.ts  extension.ts  segment.ts  sidecar.ts
vscode-voice-marker/test/: segment.test.ts
