[project]
name = "stylebot"
version = "0.1.0"
description = "Tooling to fine-tune a small LLM that rewrites AI-flavoured prose into Dan Mackinlay's voice: pair capture, synthetic-pair generation, LoRA training, and a multi-signal eval harness."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.2",
    "ruamel-yaml>=0.19.1",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "openai>=1.60.0",
]

[project.optional-dependencies]
# Classifier *training* (stylebot.classify_train / `ai-style train-clf`). The
# runtime (stylebot.classify) deliberately needs none of these — it scores the
# plain-JSON head with the stdlib. Install: `uv add 'stylebot[classifier]'`.
classifier = [
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
]

[project.scripts]
ai-style = "stylebot.bin.ai_style:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    # For the trainer tests (stub embedding matrices — sentence-transformers is
    # deliberately NOT here; no model downloads in the test suite).
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stylebot"]
